Prevent overflow of event message (SAAS-501)

--- a/assets/sass/blocks/dashboard.scss
+++ b/assets/sass/blocks/dashboard.scss
@@ -264,6 +264,10 @@
                 span {
                   float: left;
                   display: block;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  width: 350px;
                 }
               }
               .right-p {
